--- a/source/includes/_Connector.md.erb
+++ b/source/includes/_Connector.md.erb
@@ -1,3 +1,7 @@
+#Connector Service
+
+In AIOPS, ConnectorService acts as a gateway to interact with all third party monitoring tools and different ITPA & ITSM tools.
+
 ## Service Status Check
 
 ```http
@@ -23,8 +27,8 @@ API to check service health
 ### Query Parameters
 `NA`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -61,8 +65,8 @@ API to check connectivity with Database and messaging queue (kafka)
 ### Query Parameters
 `NA`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -101,8 +105,8 @@ API to expose webhook with other monitoring tools
     "description": "ZZ_WEBHOOK TEST Memory-Usable Alarm OUSPXAAG"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -136,8 +140,8 @@ API to login to ITPA tool
     "source": "braio"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -175,8 +179,8 @@ API to execute workflow in ITPA tool
     "variables": {}
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -211,8 +215,8 @@ API to fetch workflow logs from ITPA tool for any workflow id
     "source": "braio"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -247,8 +251,8 @@ API to fetch current status of workflow from ITPA tool for any workflow id
     "source": "braio"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -282,8 +286,8 @@ API to fetch all workflows for a project from ITPA tool
     "source": "braio"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -416,8 +420,8 @@ API to create a ticket in ITSM
     "urgency": "string"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -550,8 +554,8 @@ API to update a ticket in ITSM
     "urgency": "string"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -583,8 +587,8 @@ API to fetch a ticket in ITSM with its sys id value
 ### Query Parameters
 `NA`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -616,8 +620,8 @@ API to poll tickets from ITSM
 ### Query Parameters
 `NA`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -649,8 +653,8 @@ API to fetch work notes of a ticket from ITSM
 ### Query Parameters
 `NA`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -682,8 +686,8 @@ API to auto start the services
 ### Query Parameters
 `NA`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
