--- a/source/includes/_Scheduler.md.erb
+++ b/source/includes/_Scheduler.md.erb
@@ -1,3 +1,5 @@
+#Scheduler Service
+
 ## Service Status Check
 
 ```http
@@ -23,8 +25,8 @@ API to check service health
 ### Query Parameters
 `NA`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -58,8 +60,8 @@ API to check connectivity with Database
 ### Query Parameters
 `NA`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -91,8 +93,8 @@ API to delete a scheduled job
 ### Query Parameters
 `scheduler_id=sched000028`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -134,8 +136,8 @@ API to  Add/Insert a job to schedule
     "type": "api"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -178,8 +180,8 @@ API to update a scheduled job
     "type": "api"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -211,8 +213,8 @@ API to delete a trusted site
 ### Query Parameters
 `name=cmdb`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -272,8 +274,8 @@ API to fetch all trusted sites
     "url": "aiops-cmdb-service/aiops/cmdb-svc"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -308,8 +310,8 @@ API to add/insert a trusted site
     "url": "aiops-cmdb-service/aiops/cmdb-svc"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
@@ -344,8 +346,8 @@ API to update a trusted site
     "url": "aiops-cmdb-service/aiops/cmdb-svc"
 }`
 
-Metadata | Yes/No 
---------- | ------- 
+Metadata | Yes/No
+--------- | -------
 Authentication | No
 Pagination | No
 Offset | No
